Same results with py-version, Add frcnn proposal layer cu version

--- a/examples/FRCNN/config/voc_config.json
+++ b/examples/FRCNN/config/voc_config.json
@@ -43,6 +43,7 @@
  "pixel_means": "102.9801, 115.9465, 122.7717",
  "rng_seed": "3",
  "eps": "0.00000000000001",
+ "inf": "100000000",
 
  "feat_stride": "16",
  "anchors": "-84, -40, 99, 55,
